CRUD Others + Initiation Commande Client

--- a/src/main/webapp/WEB-INF/messages/applicationRessources_en.properties
+++ b/src/main/webapp/WEB-INF/messages/applicationRessources_en.properties
@@ -30,6 +30,19 @@ common.adresse= address
 common.photo = Photo
 common.action = Actions
 
+#Commande Client#
+common.client.commande=Customer Orders
+common.client.commande.list=List of Customer Orders
+common.ajouter.commande = Add
+common.client.commande.code = Code
+common.client.commande.date = Date
+common.client= Customers
+common.client.commande.total = Total
+common.list.commande = List of Orders
+common.qte= Quantite
+common.liste.detail.client = Details of the order
+common.list.detail = List Details
+
 #Client Validation#
 common.client.nom.validation = Veuillez saisir votre Nom svp !
 
@@ -46,3 +59,34 @@ common.annuler = Cancel
 common.confirmation = Confirmation
 common.confirmation.msg = Are you sure you want to delete the Customer : 
 common.confirmation.suppression = Confirm deletion
+
+#Category#
+common.liste.category = List of Category
+common.category= Category
+common.ajouter.category= Add Category
+common.gestion.category = Category Management
+common.nouveau.category =New Category
+common.category.code = Category Code
+common.category.designation = Designation
+common.confirmation.msg.category = Are you sure you want to delete the Category:
+
+#Fournisseur#
+common.liste.fournisseurs= List of Providers
+common.ajouter.fournisseur= Add Provider
+common.confirmation.msg.fournisseur = Are you sure you want to delete the Provider : 
+common.gestion.fournisseur = Management of Providers
+common.nouveau.fournisseur = New Providers
+
+
+#Article#
+common.liste.articles = List of Articles
+common.article= Articles
+common.article.code = Code Article
+common.article.designation = Designation
+common.article.prixHT = Unit Price HT
+common.article.taux = Rate TVA
+common.article.prixTTC= Unit Price TTC
+common.gestion.article = Management of Articles
+common.nouveau.article = New Article
+common.ajouter.article = Add Article
+common.confirmation.msg.article = Are you sure you want to delete this Article : 
