--- a/src/main/webapp/WEB-INF/messages/applicationRessources_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/applicationRessources_fr.properties
@@ -6,19 +6,18 @@ common.beinvenu = Nous sommes heureux de vous acceuillir dans notre systeme de g
 common.403.msg = Malheureusement, vous n'avez absolument pas le droit pour acceder a cette page !
 common.403.retour = Voulez-vous retourner vers la page precedente ?
 common.Logout = Se deconnecter
-
 common.dashboard = Tableau de bord
 common.article=Articles
-common.client=Clients
-common.client.commande=Commandes Clients
+
+
 common.fournisseur=Fournisseurs
 common.fournisseur.commande= Commandes Fournisseurs
 common.stock=Stock
 common.vente=Vente
-common.parametrage=Paramétrages
+common.parametrage=Parametrages
 common.parametrage.utilisateur=Utilisateurs
 common.parametrage.category=Categories
-common.liste.clients= Liste des Clients
+
 
 #Client#
 common.nom = Nom
@@ -27,9 +26,28 @@ common.mail = Email
 common.adresse= Adresse
 common.photo = Photo
 common.action = Actions
+common.liste.clients= Liste des Clients
+
+#Commande Client#
+common.client.commande=Commandes Clients
+common.client.commande.list=Liste des Commandes Clients
+common.ajouter.commande = Ajouter
+common.client.commande.code = Code
+common.client.commande.date = Date
+common.client= Clients
+common.client.commande.total = Total
+common.list.commande = Liste des Commandes
+common.qte= Quantite
+common.liste.detail.client = Details de la Commande
+common.list.detail = Liste Details
+##
+common.gestion.commande = Gestion des Commandes
+common.commande.nouvelle = Nouvelle Commande
+common.article.not.found = L'article cherche n'existe pas !
 
 #Client Validation#
 common.client.nom.validation = Veuillez saisir votre Nom svp !
+
 
 #Actions#
 common.ajouter= Ajouter Client
@@ -44,3 +62,34 @@ common.annuler = Annuler
 common.confirmation = Confirmation
 common.confirmation.msg = Etes vous sur de vouloir supprimer le Client : 
 common.confirmation.suppression = Confirmer la suppression
+
+#Category#
+common.liste.category = Liste des Categories
+common.category= Categorie
+common.ajouter.category= Ajouter Categorie
+common.gestion.category = Gestion des Categories
+common.nouveau.category = Nouveau Categorie
+common.category.code = Code Categorie
+common.category.designation = Designation
+common.confirmation.msg.category = Etes vous sur de vouloir supprimer la Categorie : 
+
+#Fournisseur#
+common.liste.fournisseurs= Liste des Fournisseurs
+common.ajouter.fournisseur= Ajouter Fournisseur
+common.confirmation.msg.fournisseur = Etes vous sur de vouloir supprimer le Fournisseur : 
+common.gestion.fournisseur = Gestion des Fournisseurs
+common.nouveau.fournisseur = Nouveau Fournisseur
+
+
+#Article#
+common.liste.articles = Liste des Articles
+common.article= Articles
+common.article.code = Code Article
+common.article.designation = Designation
+common.article.prixHT = Prix Unitaire HT
+common.article.taux = Taux TVA
+common.article.prixTTC= Prix Unitaire TTC
+common.gestion.article = Gestion des Articles
+common.nouveau.article = Nouvel Article
+common.ajouter.article = Ajouter Article
+common.confirmation.msg.article = Etes vous sur de vouloir supprimer cet Article : 
